Fix visibility issue with css

--- a/Appalogue/app/assets/stylesheets/application.css
+++ b/Appalogue/app/assets/stylesheets/application.css
@@ -115,12 +115,7 @@ footer {
 
 #notice, #alert {
 	font-size: 20px;
-	color: white;
-	text-shadow:
-   -1px -1px 0 #000,  
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-     1px 1px 0 #000;
+	color: black;
 }
 
 /* === Classes === */ /* ================================================================================================*/
